Make sure that fee doesn't overlap "Next" button
it used to do that on mobile with keyboard active

--- a/src/components/sendWritable/sendWritable.css
+++ b/src/components/sendWritable/sendWritable.css
@@ -11,6 +11,7 @@
 
 .form {
   position: relative;
+  margin-bottom: 15px;
 
   & input {
     border-radius: 0;
